Ensure the omnijar is shut down in the fork server to prevent memory leaks
Categories
(Core :: IPC, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox-esr115 | --- | unaffected |
| firefox117 | --- | unaffected |
| firefox118 | --- | disabled |
| firefox119 | --- | fixed |
People
(Reporter: jld, Assigned: jld)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
I just tried pushing to Try with the fork server enabled, and there are a lot of errors like this:
TEST-UNEXPECTED-FAIL | leakcheck | forkserver 5168 bytes leaked (Mutex, nsLocalFile, nsStringBuffer, nsZipArchive, nsZipHandle)
I haven't investigated yet but I'm pretty sure this is from the Omnijar preloading in bug 1840515 — the fork server calls Omnijar::Init, and its child processes might call Omnijar::CleanUp but the fork server itself never does (I'm pretty sure). This is probably a one-line fix.
Comment 1•3 years ago
|
||
Set release status flags based on info from the regressing bug 1840515
Updated•3 years ago
|
Comment 2•3 years ago
|
||
Is that something we should fix for 118 or should it ride the trains?
| Assignee | ||
Comment 3•3 years ago
•
|
||
(In reply to Pascal Chevrel:pascalc (PTO until August 21) from comment #2)
Is that something we should fix for 118 or should it ride the trains?
This is about code that's preffed off (and has other known issues), so it won't need uplift.
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
Updated•3 years ago
|
Comment 6•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Description
•