Bug 1851271 - Avoid leaking the omnijar in the fork server. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D187528